--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="connectwithme"><h3>Connect with Me<br></h3></div>
 
         <div class="row">
-        <div ><br><a href="https://github.com/eddmoura" target="_blank"><img src="images/git_pic.png" id="git" class=" col-xs-2 col-sm-2 col-md-3 col-lg-4"></a></div>
+        <div ><br><a href="https://github.com/eddmoura" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7G9JTqB8z1AVU-Lq7xLy1fQ3RMO-Tt6PRplyhaw75XCAnYvAYxg" id="git" class=" col-xs-2 col-sm-2 col-md-3 col-lg-4"></a></div>
 
         <div ><a href="https://www.linkedin.com/in/eduardo-moura-56296a22/" target="_blank"><img src="images/linkedin_pic.png" id="linked" class="col-xs-2 col-sm-2 col-md-3 col-lg-4"></a></div>
 
