--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <img src="images/eduardofoto001.jpg" alt="..." class="img-thumbnail img-responsive">
         </div>
         <div class="col-md-6 col-sm-12 col-lg-3 ">
-          My name is Eduardo Moura I am current learning Web development at Rutgers University coding bootcamp. I have a Bachelor degree in Business Management focus in Marketing. I am very excited about learning new technologies and I am dedicating 100% of my time to succeed in this program. I have been learning differents coding language for over a year now. My greates strenghts is my dedication and commitment  to deliver the best result in any task I'm involved.
+          My name is Eduardo Moura I am current learning Web development at Rutgers University coding bootcamp. I have a Bachelor degree in Business Management focus in Marketing. I am very excited about learning new technologies and I am dedicating 100% of my time to succeed in my new career path. I have been learning different coding language for over a year now, such as HTML, CSS, and JavaScript. I’ve been interested in programming since I was a little kid, my first experience with programming was trying to hack a webpage when I was 14 years old and it worked, but I got scared and stopped because I didn’t want to be the bad guy, I know now you can do many good things with programming apart from the criminal images I had when I was 14 years old. My greatest strengths are my dedication and commitment to deliver the best result in any task I'm involved.
         </div>
  <!--    </div> -->
 
